# nidra

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
code/: animatedcharacter.cpp  animatedcharacter.hpp  animatedcharacterbuffers.cpp  animatedcharacterbuffers.hpp  animatedcharacterdata.cpp  animatedcharacterdata.hpp  animatedcharacterinputhandler.cpp  animatedcharacterinputhandler.hpp  controls.cpp  controls.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
code/realtime/: animatedcharacterbuffers.cpp  animatedcharacterbuffers.hpp
code/realtime/shaders/: fshader_bone.glsl  vshader_bone.glsl
code/scene/: animatedcharacter.hpp  animatedcharacterdata.cpp  animatedcharacterdata.hpp  animatedcharacterinputhandler.hpp
code/shaders/: fshader.glsl  vshader.glsl
code/utilities/: controls.cpp  controls.hpp  shader.hpp  texture.cpp  texture.hpp
driver/: main.cpp
models/: combat.dae
